# aliceml-abandoned

./: .cvsignore  .hgignore  .hgtags  ALICEVERSION  Base.cc  Base.hh  COPYING  InitSeam.cc  Makefile  Makefile.am  Makefile.cvs  Makefile.in  Makefile.lightning.am  Makefile.rules  Makefile.vars  Makefile.vars.in  NEWS  Outline.cc  README  README.md  Seam.hh  SeamMain.cc  build.sh  clean-mozart.sh  clean-seam.sh  clean.sh  configure  configure.ac  cvsstat.awk  install-mozart.sh  install-seam.sh  install-stockwerk.sh  install.sh  install0.sh  make.sh  seam.m4  seamtool  seamtool.in
alice/lib/gtk/mozart/: GTK_BINDING-sig.aml  Gdk.aml  GtkBinding.aml  GtkTreeTypes.aml  GtkTypes.aml  (+7 more)
alice/misc/dist-seam/: COPYING  Makefile.am  configure.ac
generic/: Authoring.hh  Backtrace.hh  BindFutureWorker.cc  BindFutureWorker.hh  BootLinker.cc  BootLinker.hh  Broker.cc  Broker.hh  ByneedInterpreter.cc  ByneedInterpreter.hh  Closure.hh  ConcreteCode.hh  ConcreteRepresentation.hh  ConcreteRepresentationHandler.hh  Debug.cc  Debug.hh  DebugFrame.hh  DebugWorker.cc  DebugWorker.hh  Debugger.cc  Debugger.hh  DebuggerEvent.cc  DebuggerEvent.hh  DllLoader.cc  DllLoader.hh  Double.hh  FinalizationSet.hh  Float.hh  GenericDebuggerEvent.cc  GenericDebuggerEvent.hh  IODesc.cc  IODesc.hh  IOHandler.cc  IOHandler.hh  Interpreter.cc  Interpreter.hh  JitterGenericData.hh  Makefile  Makefile.am  Makefile.in  (+47 more)
lightning/doc/: Makefile.am  lightning.info  lightning.info-3  lightning.texi  porting.texi  stamp-vti
seam/: .cvsignore  .hgignore  .hgtags  AUTHORS  Base.cc  Base.hh  ChangeLog  Makefile.am  Makefile.cvs  Makefile.lightning.am  Outline.cc  Seam.hh  SeamMain.cc  configure.ac  seam.m4
seam/adt/: .cvsignore  DynamicArray.cc  Makefile.am  Queue.hh
seam/debian/: changelog  rules  seam.info  seam.install  seam.spec
seam/generic/: .cvsignore  Backtrace.hh  BindFutureWorker.cc  Broker.cc  Debug.cc  DebugWorker.hh  Debugger.cc  Debugger.hh  DebuggerEvent.hh  DllLoader.hh  FinalizationSet.hh  GenericDebuggerEvent.cc  GenericDebuggerEvent.hh  IODesc.cc  IODesc.hh  Interpreter.cc  JitterGenericData.hh  Minimizer.cc  MinimizerLoader.cc  Pickler.cc  Pickler.hh  Primitive.cc  Primitive.hh  Profiler.cc  Profiler.hh  SignalHandler.cc  SignalHandler.hh  StackFrame.cc  StackFrame.hh  String.hh  TaskStack.hh  Time.cc  Time.hh  UniqueString.cc  Unpickler.cc  Unpickler.hh  Worker.cc  WrappedUnmanagedPointer.hh  ZLib.hh
seam/homepage/: Makefile  download.html  index.html  papers.html  project.html
seam/homepage/manual/: alice.html  generic.html  store.html
seam/store/: BaseMap.cc  GCHelper.hh  HeaderOp.hh  JITStore.cc  JITStore.hh  Makefile.am  Map.cc  Map.hh  MapNode.hh  Parameter.hh  PointerOp.hh  Store.cc  StoreConfig.cc  Types.hh  Value.hh  WeakMap.cc
store/: .cvsignore  Base.hh  BaseMap.cc  BaseMap.hh  GCHelper.hh  Handler.hh  HeaderOp.hh  Heap.cc  Heap.hh  JITStore.cc  JITStore.hh  Makefile  Makefile.am  Makefile.in  Map.cc  Map.hh  MapNode.hh  Memory.cc  Memory.hh  Parameter.hh  PointerOp.hh  Set.hh  StatusWord.hh  Store.cc  Store.hh  StoreConfig.cc  Types.hh  Value.hh  WeakDictionary.cc  WeakDictionary.hh  WeakMap.cc  WeakMap.hh  configure  configure.ac  dataset.hh  headerdef.hh  memmanager.cc  memmanager.hh
support/lightning/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen  configure.ac  lightning.h.in  lightning.m4
support/lightning/doc/: Makefile.in  body.texi  lightning.info-1  lightning.info-2  texi2dvi  toc.texi  using.texi
support/lightning/lightning/: Makefile.am  asm-common.h  core-common.h
support/lightning/opcode/: Makefile.am  Makefile.in  disass.c  sysdep.h
support/lightning/tests/: Makefile.am  Makefile.in  fib.c  fib.ok  fibdelay.c  fibit.c  funcfp.c  funcfp.ok  testfp.ok
vm-jvm/: .cvsignore  Array.java.m4  Builtin.java.m4  ByNeedFuture.java.m4  CManager.java.m4  Char.java.m4  ClientManager.java.m4  ConVal.java.m4  ConVal2.java.m4  ConVal3.java.m4  ConVal4.java.m4  Connection.java.m4  Cons.java.m4  Constants.java.m4  Constructor.java.m4  DMLConVal.java.m4  DMLPort.java.m4  DMLTransient.java.m4  DMLTuple.java.m4  DMLValue.java.m4  ExceptionWrapper.java.m4  Exec.java.m4  Export.java.m4  Exporter.java.m4  Function.java.m4  Future.java.m4  GName.java.m4  General.java.m4  Int.java.m4  JObject.java.m4  LVar.java.m4  List.java.m4  Makefile.in  MarshalInputStream.java.m4  MarshalOutputStream.java.m4  Math.java.m4  Name.java.m4  NoGood.java.m4  Option.java.m4  PickleClassLoader.java.m4  (+24 more)
vm-seam/: .cvsignore  Alice.hh  AliceMain.cc  ChangeLog  Makefile  Makefile.am  Makefile.bootstrap  Makefile.bootstrap.in  Makefile.cvs  Makefile.rules  Makefile.vars  README  Toplevel.import  acinclude.m4  configure.ac
vm-seam/alice/: AbstractCode.cc  AbstractCode.hh  AbstractCodeFrame.cc  AbstractCodeFrame.hh  AbstractCodeInterpreter.cc  AbstractCodeInterpreter.hh  AliceConcreteCode.cc  AliceConcreteCode.hh  AliceDebuggerEvent.cc  AliceDebuggerEvent.hh  AliceLanguageLayer.cc  AliceLanguageLayer.hh  AliceProfiler.cc  AliceProfiler.hh  Authoring.hh  Base.hh  BootLinker.cc  BootLinker.hh  ByteCode.cc  ByteCode.hh  ByteCodeAlign.hh  ByteCodeAlign32.hh  ByteCodeBuffer.cc  ByteCodeBuffer.hh  ByteCodeConstProp.cc  ByteCodeConstProp.hh  ByteCodeFrame.hh  ByteCodeInliner.cc  ByteCodeInliner.hh  ByteCodeInstrs.hh  ByteCodeInterpreter.cc  ByteCodeInterpreter.hh  ByteCodeJitter.cc  ByteCodeJitter.hh  ByteCodeSourceLocations.hh  ByteCodeSpecializer.cc  ByteConcreteCode.cc  ByteConcreteCode.hh  Data.cc  Data.hh  (+23 more)
vm-seam/alice/primitives/: Array.cc  Array.icc  Authoring.hh  Byte.cc  Char.cc  CharArray.cc  Exn.cc  Future.cc  General.cc  GlobalStamp.cc  Hole.cc  Int.cc  IntInf.cc  List.cc  Makefile.am  Math.cc  Option.cc  Promise.cc  Real.cc  Ref.cc  Remote.cc  String.cc  Thread.cc  Timer.cc  UniqueString.cc  Unqualified.cc  Unsafe.cc  UnsafeMap.cc  Vector.cc  Vector.icc  Word.cc  Word.icc  Word31.cc  Word32.cc  Word8.cc  Word8Array.cc  Word8Vector.cc
vm-seam/debian/: Makefile.am  alice.info  alice.install  alice.spec  changelog  control  rules
vm-seam/test/native/: Timer.cc
(+6255 files in other folders)
