INCLUDES = -I$(top_srcdir)

noinst_LTLIBRARIES = \
	libgeneric.la

libgeneric_la_SOURCES = \
	BindFutureWorker.cc \
	Broker.cc \
	Debug.cc \
	Debugger.cc \
	DebugWorker.cc \
	DllLoader.cc \
	GenericDebuggerEvent.cc \
	Interpreter.cc \
	IODesc.cc \
	IOHandler.cc \
	Pickler.cc \
	Primitive.cc \
	Profiler.cc \
	PushCallWorker.cc \
	RootSet.cc \
	Scheduler.cc \
	SignalHandler.cc \
	StackFrame.cc \
	Stream.cc \
	TaskStack.cc \
	Transients.cc \
	UniqueString.cc \
	Unpickler.cc \
	Worker.cc

nobase_dist_pkginclude_HEADERS = \
	generic/Authoring.hh \
	generic/Backtrace.hh \
	generic/BindFutureWorker.hh \
	generic/Broker.hh \
	generic/Closure.hh \
	generic/ConcreteCode.hh \
	generic/ConcreteRepresentationHandler.hh \
	generic/ConcreteRepresentation.hh \
	generic/DebuggerEvent.hh \
	generic/Debugger.hh \
	generic/Debug.hh \
	generic/DebugWorker.hh \
	generic/DllLoader.hh \
	generic/Double.hh \
	generic/FinalizationSet.hh \
	generic/Float.hh \
	generic/GenericDebuggerEvent.hh \
	generic/Interpreter.hh \
	generic/IODesc.hh \
	generic/IOHandler.hh \
	generic/JitterGenericData.hh \
	generic/Pickle.hh \
	generic/Pickler.hh \
	generic/Primitive.hh \
	generic/Profiler.hh \
	generic/PushCallWorker.hh \
	generic/RootSet.hh \
	generic/Scheduler.hh \
	generic/SignalHandler.hh \
	generic/StackFrame.hh \
	generic/Stream.hh \
	generic/String.hh \
	generic/TaskStack.hh \
	generic/Thread.hh \
	generic/ThreadQueue.hh \
	generic/Transform.hh \
	generic/Transients.hh \
	generic/Tuple.hh \
	generic/UniqueString.hh \
	generic/Unpickler.hh \
	generic/Worker.hh

dist_noinst_HEADERS = \
	ZLib.hh
