INCLUDES = -I$(top_srcdir) -I$(top_builddir) $(LTDLINCL)

genericincludedir = ${pkgincludedir}/generic

noinst_LTLIBRARIES = \
	libgeneric.la

libgeneric_la_SOURCES = \
	BindFutureWorker.cc \
	Broker.cc \
	Debug.cc \
	Debugger.cc \
	DebugWorker.cc \
	DllLoader.cc \
	GenericDebuggerEvent.cc \
	Interpreter.cc \
	IODesc.cc \
	IOHandler.cc \
	Pickler.cc \
	Primitive.cc \
	Profiler.cc \
	PushCallWorker.cc \
	RootSet.cc \
	Scheduler.cc \
	SignalHandler.cc \
	StackFrame.cc \
	Stream.cc \
	TaskStack.cc \
	Time.cc \
	Transients.cc \
	UniqueString.cc \
	Unpickler.cc \
	Worker.cc

dist_genericinclude_HEADERS = \
	Authoring.hh \
	Backtrace.hh \
	BindFutureWorker.hh \
	Broker.hh \
	Closure.hh \
	ConcreteCode.hh \
	ConcreteRepresentationHandler.hh \
	ConcreteRepresentation.hh \
	DebuggerEvent.hh \
	Debugger.hh \
	Debug.hh \
	DebugFrame.hh \
	DebugWorker.hh \
	DllLoader.hh \
	Double.hh \
	FinalizationSet.hh \
	Float.hh \
	GenericDebuggerEvent.hh \
	Interpreter.hh \
	IODesc.hh \
	IOHandler.hh \
	JitterGenericData.hh \
	Pickle.hh \
	Pickler.hh \
	Primitive.hh \
	Profiler.hh \
	PushCallWorker.hh \
	RootSet.hh \
	Scheduler.hh \
	SignalHandler.hh \
	StackFrame.hh \
	Stream.hh \
	String.hh \
	TaskStack.hh \
	Time.hh \
	Thread.hh \
	ThreadQueue.hh \
	Transform.hh \
	Transients.hh \
	Tuple.hh \
	UniqueString.hh \
	Unpickler.hh \
	Worker.hh

dist_noinst_HEADERS = \
	ZLib.hh
