dnl
dnl $Date$ $Author$ $Revision$
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT()

dnl Checks for programs.
AC_PROG_LN_S
AC_CHECK_PROG(HASM4,m4,yes,no,$PATH)
if test $HASM4 = "no"
  then
	AC_MSG_ERROR("No m4 found.");
  else
	m4="m4"
fi
AC_CHECK_PROG(HASSML,sml,yes,no,$PATH)
if test $HASSML = "no";
  then
	AC_MSG_ERROR("No sml found.");
  else
	smlcm="sml"
fi
AC_CHECK_PROG(HASSML,sml-cm,yes,no,$PATH)
if test HASSML = "no";
  then
	AC_MSG_RESULT("No sml-cm. Cross fingers and hope it works with sml.");
  else
	smlcm="sml-cm"
fi
AC_CHECK_PROG(HASJAVA,javac,yes,no,$PATH)
if test $HASJAVA = "no" ;
  then
	AC_MSG_ERROR("No javac found.");
  else
	javac="javac"
fi
AC_CHECK_PROG(HASMLJ,mlj,yes,no,$PATH)
if test $HASMLJ = "no" ;
  then
	mlj="echo"; \
	AC_MSG_RESULT("No mlj found.")
  else
	mlj="mlj"
fi

dnl Check system type
UNAME=`uname`
if test $UNAME = "Linux"
  then
	platform="x86-linux"
  else
	platform="sparc-solaris"
fi

dnl Checks for libraries.
dnl Replace `main' with a function in -link:

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_SUBST(mlj)
AC_SUBST(platform)
AC_SUBST(m4)
AC_SUBST(javac)
AC_SUBST(smlcm)
AC_OUTPUT(bin/Makefile bin/dmlexec Makefile benchmarks/Makefile java/Makefile java/src/Makefile java/src/runtime/Makefile java/src/tools/Makefile java/src/test/Makefile Compiler/Makefile Compiler/Backend/Makefile)
