# Authors: 
#      Daniel Simon, <dansim@ps.uni-sb.de>
#      Andy Walter, <anwalt@ps.uni-sb.de>
#
# Copyright:
#      Andy Walter, Daniel Simon, 1999
#
# Last change:
#    $Date$ by $Author$
# $Revision$

dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT()

dnl Checks for programs.
AC_PROG_LN_S
AC_CHECK_PROG(HASM4,m4,yes,no,$PATH)
if test $HASM4 = "no"
  then
	AC_MSG_ERROR("No m4 found.");
  else
	m4="m4"
fi
AC_CHECK_PROG(HASJAVA,java,yes,no,$PATH)
if test $HASJAVA = "no"
  then
	AC_MSG_ERROR("No java found.")
  else
	java="java"
fi
AC_CHECK_PROG(HASJAVAC,javac,yes,no,$PATH)
if test $HASJAVAC = "no" ;
  then
	AC_MSG_ERROR("No javac found.");
  else
	javac="javac"
fi
AC_CHECK_PROG(HASJAR,jar,yes,no,$PATH)
if test $HASJAR = "no" ;
  then
	AC_MSG_ERROR("No jar found.");
  else
	jar="jar"
fi
AC_CHECK_PROG(HASJAVADOC,javadoc,yes,no,$PATH)
if test $HASJAVADOC = "no" ;
  then
	javadoc="echo" ; \
	AC_MSG_RESULT("No javadoc found.");
  else
	javadoc="javadoc"
fi
AC_CHECK_PROG(JASMIN,jasmin,yes,no,$PATH)
if test $JASMIN = "no" ;
  then
	AC_MSG_ERROR("No jasmin found.");
  else
	jasmin="jasmin"
fi

dnl Check system type
UNAME=`uname`
if test $UNAME = "Linux"
  then
	platform="x86-linux"
  else
	platform="sparc-solaris"
fi

dnl Checks for libraries.
dnl Replace 'main' with a function in -link:
RTHOME=`which $java`
RTHOME=`dirname $RTHOME`
RTHOME=`dirname $RTHOME`/jre/lib/rt.jar
AC_CHECK_FILE($RTHOME,rt="$RTHOME",
    AC_MSG_ERROR("Did not find rt.jar."))
dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_SUBST(platform)
AC_SUBST(m4)
AC_SUBST(java)
AC_SUBST(javac)
AC_SUBST(jar)
AC_SUBST(javadoc)
AC_SUBST(jasmin)
AC_SUBST(rt)

runtime="$PWD/runtime.jar"
AC_SUBST(runtime)
patch="$PWD/patch.jar"
AC_SUBST(patch)
dmllib="$PWD/../stoc/backend-jvm"
AC_SUBST(dmllib)
policy="$PWD/policy"
AC_SUBST(policy)

AC_OUTPUT(Makefile)

echo "Creating classes subdirectory."
test -e java/classes || mkdir java/classes
echo "Done."
